style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  outline: none;
}

#header {
  background-color: rgb(245, 26, 26);
  position: relative;
}

#nav-item {
  display: flex;
  justify-content: space-evenly;
  list-style: none;
  color: #fff;
}

#news {
  font-size: 100px;
  font-family: Arial, Helvetica, sans-serif;
}

#date {
  font-size: 25px;
  margin-top: 80px;
}

#news:hover {
  cursor: pointer;
}

#sign {
  margin-top: 80px;
  font-size: 30px;
  font-weight: bold;
}

#sign:hover {
  cursor: pointer;
}

button {
  font-size: 30px;
}

.nav {
  justify-content: space-between;
  color: black;
  margin-left: 20px;
}

.nav-item {
  font-size: 25px;
  font-weight: bold;
}

.nav-item:hover {
  color: #f10909;
  cursor: pointer;
}

#search {
  color: rgb(102, 92, 92);
}

#button {
  color: rgb(245, 7, 7);
  border: none;
  background-color: #fff;
  font-size: 25px;
  font-weight: bold;
}

.main-title {
  font-size: 1.5rem;
  font-weight: bold;
  color: rgb(170, 163, 163);
}

.card-title {
  font-size: 2rem;
  font-weight: bold;
  color: rgb(10, 10, 10);
}

.card-title2 {
  font-size: 2rem;
  font-weight: bold;
  color: #fff;
}

.card-title21:hover {
  text-decoration: underline;
  text-decoration-color: red;

}

.card-title:hover {
  cursor: pointer;
  text-decoration: underline;
  text-decoration-color: red;
}

.card-text {
  font-size: 1.5rem;
}

.container2 {
  background-color: black;
  height: 30rem;
}

.container2-text {
  font-size: 1.5rem;
  color: rgb(211, 208, 208);
}

.opinion:hover {
  cursor: pointer;
}

.sm-p {
  font-size: 1.5rem;
  font-weight: bold;
  color: rgb(2, 2, 2);
}

.sm-p:hover {
  color: #f10909;
  cursor: pointer;
}

.side-para {
  font-size: 1.3rem;
  font-weight: bold;
  color: rgb(2, 2, 2);
}

.side-para:hover {
  color: #f10909;
  cursor: pointer;
}

.auth {
  font-size: 1.2rem;
  font-weight: bold;
  color: rgb(46, 43, 43);
}

.side-par {
  font-size: 1.3rem;
  font-weight: bold;
  color: black;
}

.side-par:hover {
  text-decoration: underline;
  text-decoration-color: red;
}

.col-3 {
  border-radius: 0%;
}

iframe {
  width: 56rem;
  height: 479px;
}

.footer-icons {
  display: flex;
  justify-content: flex-end;
  justify-content: space-evenly;
  font-size: 2rem;
  list-style: none;
}

.footer-icon {
  margin-top: -3px;
}

.footer-links {
  display: flex;
  justify-content: space-evenly;
  list-style: none;
  margin: 0 30px;
  word-spacing: 20px;
  margin-bottom: 80px;
  font-size: 1.5rem;
  color: rgb(145, 139, 139);
}

.footer-links li:hover {
  color: rgb(44, 43, 43);
  cursor: pointer;
}

button {
  background-color: #f10909;
  color: #fff;
  border: none;
  font-weight: bold;
}

.side-par2 {
  font-size: 2rem;
  color: rgb(12, 11, 11);
  font-weight: bold;
}

#footer-news {
  font-size: 3rem;
  font-weight: bolder;
  color: #f10909;
  transform: translateX(-159px);
}

.img-con {
  padding-top: 60px;
}
 

